# NHAI_attendance

./: .gitignore  .npmrc  App.tsx  LICENSE  app.json  babel.config.js  flake.nix  package.json  pnpm-lock.yaml  react-native.config.js
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
ios/: Podfile
ios/DatalakeEdge/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/DatalakeEdge.xcodeproj/: project.pbxproj
ios/DatalakeEdge.xcodeproj/xcshareddata/xcschemes/: DatalakeEdge.xcscheme
modules/facial_recognition_module/: ghostface.tflite
modules/react-native-vision-auth/: CONTRIBUTING.md  LICENSE  README.md  VisionAuth.podspec  nitro.json  package.json  pnpm-lock.yaml  react-native.config.js  tsconfig.json
modules/react-native-vision-auth/.github/ISSUE_TEMPLATE/: config.yml
modules/react-native-vision-auth/android/: CMakeLists.txt  build.gradle
modules/react-native-vision-auth/android/src/main/assets/models/: student_qat_int8.tflite
modules/react-native-vision-auth/android/src/main/cpp/: cpp-adapter.cpp
modules/react-native-vision-auth/android/src/main/java/com/margelo/nitro/visionauth/: VisionAuthPackage.kt
modules/react-native-vision-auth/cpp/: VisionAuthImpl.cpp  VisionAuthImpl.h  VisionAuthImpl.hpp
modules/react-native-vision-auth/example/: app.json  package.json
modules/react-native-vision-auth/ios/: OnLoad.mm
modules/react-native-vision-auth/src/: NativeVisionAuth.ts  VisionAuth.nitro.ts  index.tsx  multiply.native.tsx  multiply.tsx
(+15 files in other folders)
